trying to fix unnecessar scrollbar

--- a/aplikacja/src/components/Navbar.module.css
+++ b/aplikacja/src/components/Navbar.module.css
@@ -1,5 +1,5 @@
 .sidenav {
-  height: 100vh;
+  height: calc(100vh - 50px);
   position: fixed;
   z-index: 1;
   top: 0;
