--- a/aplikacja/src/index.css
+++ b/aplikacja/src/index.css
@@ -31,12 +31,12 @@ padding: 0;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 50px); 
 }
 
 .main {
   margin-top: 50px;
-  height: 100vh; 
+  height: calc(100vh - 50px); 
 }
 
 @media all and (max-width: 500px) {
